# loki-controller-webapp

./: .gitignore  README.md
client/: controller.html  controller.js  index.html  index.js
server/: nucleo_interface.py  pyproject.toml  server.py
